k8/mango/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mango-service
spec:
  ports:
  - name: http
    port: 9000
  selector:
    app: mango-deployment
