k8/mango/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mango-ingress
spec:
  rules:
  - host: mango.k8.hiroyagojo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mango-service
            port:
              name: http
